added PreparedService and PreparedController